# cpp-game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
examples/basic/: main.lua
sample/scripts/: main.lua
src/: main.cpp
src/game/: game.cpp  game.h
